2010-03-31  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler.cc (fhandler_base::dup): Call setup_overlapped
	unconditionally.
	(fhandler_base::fork_fixup): Ditto.
	(fhandler_base::fixup_after_fork): Ditto.
	(fhandler_base::fixup_after_exec): Ditto.
	(fhandler_base_overlapped::setup_overlapped): Move to this class from
	fhandler_base.
	(handler_base_overlapped::destroy_overlapped): Ditto.
	(fhandler_base_overlapped::wait_overlapped): Ditto.  Track when we
	expect pending I/O.
	(fhandler_base_overlapped::read_overlapped): Move to this class from
	fhandler_base.  Return error if ongoing I/O.
	(fhandler_base_overlapped::write_overlapped): Ditto.
	(fhandler_base_overlapped::has_ongoing_io): Semi-reinstate previous
	function.
	* fhandler.h (fhandler_base::wait_overlapped): Move to
	fhandler_base_overlapped class.
	(fhandler_base::write_overlapped): Ditto.
	(fhandler_base::get_overlapped): Ditto.
	(fhandler_base::get_overlapped_buffer): Ditto.
	(fhandler_base_overlapped): New class.
	(fhandler_pipe): Inherit from fhandler_base_overlapped.  Remove
	overlapped stuff as a result.
	(fhandler_fifo): Ditto.
	* pipe.cc (fhandler_pipe::fhandler_pipe): Initialize fhandler_base_overlapped.
	(pipe): Put a descriptive name in the fhandler.

2010-03-30  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::wait_for_events): Remove call to
	sig_dispatch_pending.

2010-03-30  Thomas Wolff  <towo@towo.net>

	* fhandler.h (class dev_console): Drop vt100_graphics_mode_active.  Add
	flags vt100_graphics_mode_G0, vt100_graphics_mode_G1 and iso_2022_G1.
	* fhandler_console.cc: Throughout, tune VT100 graphics mode switching
	to follow ISO 2022 strictly.
	(fhandler_console::write) Reset VT100 graphic mode flags on terminal
	full reset (ESC c).

2010-03-30  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (open): Remove call to sig_dispatch_pending.

2010-03-30  Corinna Vinschen  <corinna@vinschen.de>
